# warpinator-tauri

./: .prettierignore  README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: avatars.rs  events.rs  lib.rs  main.rs
src-tauri/src/commands/: messages.rs  mod.rs  remotes.rs  settings.rs  transfers.rs
src/components/main/: EmptyMain.tsx  RemoteTransfers.tsx  TopAppBar.tsx  TransferCard.tsx  WarpinatorMain.tsx
src/components/main/messages/: MessageBubble.tsx  MessagesEmpty.tsx  MessagesSidebar.tsx
src/components/sidebar/: AboutDialog.tsx  SidebarEmpty.tsx  SidebarRemote.tsx  SidebarSearch.tsx  SidebarSearchEmpty.tsx  SidebarUser.tsx  WarpinatorSidebar.tsx
src/components/ui/: card.tsx  context-menu.tsx  dialog.tsx  item.tsx  sheet.tsx
src/components/window-controls/: MacOSControls.tsx  WindowControls.tsx
src/contexts/: RemoteContext.tsx  SettingsProvider.tsx  ThemeProvider.tsx
src/dialogs/: AboutDialog.tsx  ManualConnectionDialog.tsx  SettingsDialog.tsx
src/hooks/: use-is-maximized.ts  use-messages.ts  use-remote.ts  use-remotes.ts  use-throttle.ts  use-transfers.ts
src/lib/: configuration.ts  registration-info.ts  theme.ts  transfers.ts
src/types/: message.ts  remote.ts  transfer.ts  warp-event.ts  warp-init.ts
src/windows/: AboutWindow.tsx  SettingsWindow.tsx
